--- a/css/styles.css
+++ b/css/styles.css
@@ -678,6 +678,8 @@ body, html{
       .carousel-item{
         height:100vh;
         overflow: hidden;
+        background-size: cover;
+        background-position: center center;
       }
       .explore-container{
         position: absolute;
